# lolengine

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  COPYING  Makefile  Makefile.am  README.md  TODO  TODO.md  bootstrap  build  build-linux  build-mingw  build-mingw.sh  build-mingw64  build-nacl32  build-nacl64  build-ps3  build.config  configure.ac  lol.sln  lolengine.config  lolengine.props  lolengine.sln  lolengine.targets  test-map.cpp  test-map.py
demos/tutorial/: 01_triangle.cpp  01_triangle.vcxproj  02_cube.cpp  02_cube.vcxproj  03_noise.cpp  03_noise.lolfx  03_noise.vcxproj  04_texture.cpp  04_texture.lolfx  04_texture.vcxproj  05_easymesh.cpp  05_easymesh.vcxproj  06_sprite.cpp  06_sprite.vcxproj  07_input.cpp  07_input.vcxproj  08_fbo.cpp  08_fbo.vcxproj  11_fractal.cpp  11_fractal.lolfx  11_fractal.vcxproj  12_texture_to_screen.lolfx  12_voronoi.cpp  12_voronoi.lolfx  12_voronoi.vcxproj  12_voronoi_distance.lolfx  12_voronoi_setup.lolfx  13_shader_builder.cpp  13_shader_builder.vcxproj  Makefile.am
doc/: Makefile.am  doxygen.cfg.in  header.html  lolengine.1  lolengine.dox  shitlolbotsays.txt
doc/examples/: Makefile.am  window.cpp  window.vcxproj
doc/grammar/: README  easymesh-parser.y  easymesh-scanner.l  lolfx-parser.y  lolfx-scanner.l
doc/legacy/: Makefile.am  benchsuite.cpp  benchsuite.vcxproj  bluenoise.cpp  btphystest.h  btphystest.vcxproj  front_camera_sprite.lolfx
doc/samples/: Makefile.am  benchsuite.cpp  benchsuite.vcxproj  bluenoise.cpp  btphystest.cpp  btphystest.h  btphystest.vcxproj  btphystest.vcxproj.filters  meshviewer.cpp  meshviewer.index.html  meshviewer.nacl.html  meshviewer.vcxproj  meshviewer_init.lua  nacl_phystest.cpp  nacl_phystest.h  nacl_phystest.vcxproj  nacl_phystest.vcxproj.filters  physicobject.h  scenesetup-parser.y  scenesetup-scanner.l  scenesetup.cpp  scenesetup.h  simplex.cpp
doc/tutorial/: 01_triangle.cpp  01_triangle.lolfx  01_triangle.vcxproj  02_cube.cpp  02_cube.lolfx  02_cube.vcxproj  03_noise.cpp  03_noise.lolfx  03_noise.vcxproj  04_texture.cpp  04_texture.lolfx  04_texture.vcxproj  05_easymesh.cpp  05_easymesh.lua  05_easymesh.vcxproj  06_sprite.cpp  06_sprite.vcxproj  07_input.cpp  07_input.lolfx  07_input.vcxproj  08_fbo.cpp  08_fbo.lolfx  08_fbo.vcxproj  09_sound.cpp  09_sound.vcxproj  11_fractal.cpp  11_fractal.lolfx  11_fractal.vcxproj  12_texture_to_screen.lolfx  12_voronoi.cpp  12_voronoi.lolfx  12_voronoi.vcxproj  12_voronoi_setup.lolfx  13_shader_builder.cpp  13_shader_builder.vcxproj  14_lol_lua.cpp  14_lol_lua.lua  14_lol_lua.vcxproj  14_lua.cpp  14_lua.vcxproj  (+12 more)
src/: Makefile  Makefile.am  androidapp.cpp  array.h  asset.cpp  asset.h  audio.cpp  audio.h  bitfield.h  camera.cpp  camera.h  commandstack.h  core.h  debugboard.cpp  debugboard.h  debugfps.cpp  debugfps.h  debugquad.cpp  debugquad.h  debugrecord.cpp  debugrecord.h  debugsphere.cpp  debugsphere.h  debugsprite.cpp  debugsprite.h  debugstats.cpp  debugstats.h  dict.cpp  dict.h  editor.cpp  eglapp.cpp  eglapp.h  emcee.cpp  emcee.h  emitter.cpp  emitter.h  entity.cpp  entity.h  font.cpp  font.h  (+95 more)
src/application/: android-app.cpp  android-app.h  application.cpp  application.h  baselua.cpp  baselua.h  egl-app.cpp  egl-app.h  sdl-app.cpp  sdl-app.h
src/audio/: audio.cpp  qoa-impl.c  qoa.cpp  sample.cpp  sampler.cpp
src/base/: assert.cpp  engine.cpp  enum.cpp  features.cpp  hash.cpp  log.cpp  string.cpp
src/bullet/: Makefile.am  lol-bullet.vcxproj  lol-bullet.vcxproj.filters  lolbullet.vcxproj
src/core/: hash.cpp  string.cpp
src/data/: Makefile.am  token.txt
src/debug/: debug.h  fps.cpp  fps.h  lines.cpp  quad.cpp  quad.h  record.cpp  record.h  sphere.cpp  sphere.h  stats.cpp  stats.h
src/easymesh/: csgbsp.cpp  csgbsp.h  easymesh-compiler.cpp  easymesh-compiler.h  easymesh-parser.y  easymesh-scanner.l  easymesh.cpp  easymesh.h  easymeshbuild.cpp  easymeshbuild.h  easymeshcsg.cpp  easymeshcursor.cpp  easymeshinternal.cpp  easymeshlua.cpp  easymeshlua.h  easymeshprimitive.cpp  easymeshrender.cpp  easymeshrender.h  easymeshtransform.cpp  shiny.lolfx  shiny_SK.lolfx  shinydebugUV.lolfx  shinydebuglighting.lolfx  shinydebugnormal.lolfx  shinydebugwireframe.lolfx  shinyflat.lolfx
src/engine/: entity.cpp  entity.h  tickable.cpp  ticker.cpp  ticker.h  world.cpp  world.h  worldentity.cpp  worldentity.h
src/gpu/: debug.cpp  defaultmaterial.lolfx  emptymaterial.lolfx  framebuffer.cpp  framebuffer.h  indexbuffer.cpp  indexbuffer.h  line.lolfx  lolfx-compiler.cpp  lolfx-compiler.h  lolfx-parser.y  lolfx-scanner.l  lolfx.cpp  lolfx.h  palette.lolfx  postprocess.lolfx  rendercontext.cpp  renderer.cpp  shader.cpp  shader.h  test-material.lolfx  testmaterial.lolfx  texture.cpp  texture.h  tile.lolfx  vbo.cpp  vbo.h  vertexbuffer.cpp  (+1 more)
test/: BtPhysTest.cpp  BtPhysTest.h  BtPhysTest.vcxproj  BtPhysTest.vcxproj.filters  EasyMeshDictionnary.js  Makefile.am  MeshViewer.cpp  MeshViewer.vcxproj  MeshViewerBuffer.txt  PhysicObject.h  TypeDictionnary.js  benchsuite.cpp  benchsuite.vcxproj  btphystest.cpp  btphystest.h  btphystest.vcxproj  btphystest.vcxproj.filters  easy_mesh_dictionnary.js  easymeshdictionnary.js  front_camera_sprite.lolfx  half.cpp  lol-bench.cpp  lol-test.cpp  matrix.cpp  meshviewer.cpp  meshviewer.em.html  meshviewer.index.html  meshviewer.nacl.html  meshviewer.nacl.nmf  meshviewer.vcxproj  meshviewer_em.html  meshviewer_index.html  meshviewer_nacl.html  mviewer_em_test.lolfx  nacl_loading.js  nacl_phystest.cpp  nacl_phystest.h  nacl_phystest.vcxproj  physicobject.h  scenesetup-compiler.cpp  (+14 more)
tools/: Makefile  Makefile.am  make-font.cpp
tutorial/: 01_triangle.cpp  01_triangle.lolfx  01_triangle.vcxproj  02_cube.cpp  02_cube.lolfx  02_cube.vcxproj  03_noise.cpp  03_noise.lolfx  03_noise.vcxproj  04_texture.cpp  04_texture.lolfx  04_texture.vcxproj  05_easymesh.cpp  05_easymesh.vcxproj  06_sprite.cpp  06_sprite.vcxproj  08_fbo.cpp  08_fbo.lolfx  08_fbo.vcxproj  11_fractal.cpp  11_fractal.lolfx  11_fractal.vcxproj  12_texture_to_screen.lolfx  12_voronoi.cpp  12_voronoi.vcxproj  12_voronoi_setup.lolfx  Makefile.am
(+913 files in other folders)
